--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 			href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@400;500;700&display=swap"
 			rel="stylesheet"
 		/>
-		<title>React App</title>
+		<title>Wishbone</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
